--- a/program/index.html
+++ b/program/index.html
@@ -141,7 +141,7 @@
                         <div class="program-item">
                             <div class="time">
                                 <div>
-                                    10<br>
+                                    11<br>
                                     00
                                 </div>
                                 <hr>
@@ -483,7 +483,10 @@
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
                                 <hr/>
-                                <h4>Panel</h4>
+                                <h4>Koray Kocabaş (Moderatör, Demirören Teknoloji, Director of Big Data Analytics)</h4>
+                                <h4>Mehmet Ali Erbin (emlakjet.com CTO)</h4>
+                                <h4>Umuf Tufan (Cimri.com CTO)</h4>
+                                <h4>Tansel Kılıç (Odeon Senior Yazılım Direktörü)</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -1083,6 +1086,27 @@
                     <div class="program-container">
                      <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
                         <h4 class="program-day"> 6 Kasım Cuma günü kariyer odaklı içerikler seni bekliyor! Mülakat simülasyonları, Etkili Linkedin Kullanımı, CV Hazırlama, Teknik Mülakatlara Hazırlık gibi konularda workshoplar ve daha fazlası DataCamp 2020'de </h4>
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    20<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/onurkemalkoc.jpeg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Soru Cevap Oturumu</h3>
+                                <hr/>
+                                <h4>Onur Kemal Koç, (Sosyal Girişimci, Kariyer Koçu)</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div><br/><br/>
