--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -118,7 +118,7 @@
             <div class="container container-wide">
                 <h1 style="text-align: center;">Sponsorlarımız ve Partnerlerimiz</h1>
                 <div class="partners-container">
-                    <div class="row" style="display: none;">
+                    <div class="row">
                             <div class="col-12">
                                 <h3>Ana Sponsor</h3>
                                 <hr style="border-color: #000;">
@@ -126,8 +126,8 @@
 
                         <div class="col-12">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://trendyol.com/">
+                                    <img style="width: 70%;" src="/assets/partners/tygroup.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-4" >
+                        <div class="col-lg" >
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
                                     <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
