--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -206,17 +206,33 @@
 
                     </div>
 
-                    <div class="row" style="align-items: center;">
+                    <div class="row align-items-center" style="align-items: center;">
                         <div class="col-12">
                             <h3>Stratejik Partnerler</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg" >
+                        <div class="col-sm-">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 50%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
                                 </a>
+                            </div>
+                        </div>
+                        <div class="row" style="align-items: center;"> <!-- buraya bir row ekledim ki global ai ile deep learning tr yan yana olsun-->
+                            <div class="col-lg-6" >
+                                <div class="sponsor">
+                                    <a target="_blank" href="http://deeplearningturkiye.org/">
+                                        <img style="width: 100%;" src="/assets/partners/deeplearningtr.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6" >
+                                <div class="sponsor">
+                                    <a target="_blank" href="https://globalaihub.com/">
+                                        <img style="width: 100%;" src="/assets/partners/globalaihub.png"alt="">
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
