orcun fistik eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -1089,6 +1089,29 @@
                         <div class="program-item">
                             <div class="time">
                                 <div>
+                                    18<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/orcunfistik.jpeg" alt="">
+
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Etkili Linkedin Kullanımı</h3>
+                                <hr/>
+                                <h4>Orçun Fıstık, (Linkedin - Kıdemli Bölge Yöneticisi)</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            
+                            <div class="time">
+                                <div>
                                     19<br>
                                     00
                                 </div>
