yazım hatası düzelttim

--- a/program/index.html
+++ b/program/index.html
@@ -485,7 +485,7 @@
                                 <hr/>
                                 <h4>Koray Kocabaş (Moderatör, Demirören Teknoloji, Director of Big Data Analytics)</h4>
                                 <h4>Mehmet Ali Erbin (emlakjet.com CTO)</h4>
-                                <h4>Umuf Tufan (Cimri.com CTO)</h4>
+                                <h4>Umut Tufan (Cimri.com CTO)</h4>
                                 <h4>Tansel Kılıç (Odeon Senior Yazılım Direktörü)</h4>
                             </div>
                         </div>
