--- a/program/index.html
+++ b/program/index.html
@@ -330,7 +330,8 @@
                                 <hr/>
                                 <h4>Finans Sektörü</h4>
                             </div>
-                        </div><div class="program-item">
+                        </div>
+                        <div class="program-item">
                             <div class="time">
                                 <div>
                                     15<br>
@@ -348,9 +349,10 @@
                             <div class="text">
                                 <h3 class="item-title">Konuşma</h3>
                                 <hr/>
-                                <h4>Konuşmacı</h4>
+                                <h4>Bireysel Konuşma(Influencer)</h4>
                             </div>
-                        </div><div class="program-item">
+                        </div>
+                        <div class="program-item">
                             <div class="time">
                                 <div>
                                     16<br>
@@ -360,6 +362,72 @@
                                 <div>
                                     17<br>
                                     00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/cansucanca.jpeg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Panel</h3>
+                                <hr/>
+                                <h4>Deep Learning Türkiye</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="program-container">
+                        <h3 class="program-day">8 Kasım - Pazar</h3>
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    11<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    11<br>
+                                    30
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Konuşma</h3>
+                                <hr/>
+                                <h4>Platin Sponsor Slotu</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    11<br>
+                                    30
+                                </div>
+                                <hr>
+                                <div>
+                                    11<br>
+                                    55
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Konuşma</h3>
+                                <hr/>
+                                <h4>Altın Sponsor Slotu</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    12<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    12<br>
+                                    30
                                 </div>
                             </div>
                             <div class="image">
@@ -411,7 +479,7 @@
                                 <h3 class="item-title">Panel</h3>
                                 <hr/>
                                 <h4>Koray Kocabaş (Moderatör, Demirören Teknoloji, Director of Big Data Analytics)</h4>
-                                <h4>Mehmet Ali Erdin (emlakjet.com CTO)</h4>
+                                <h4>Mehmet Ali Erdin (Emlakjet.com CTO)</h4>
                                 <h4>Umut Tufan (Cimri.com CTO)</h4>
                                 <h4>Tansel Kılıç (Odeon Senior Yazılım Direktörü)</h4>
                             </div>
@@ -495,7 +563,7 @@
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
                                 <hr/>
-                                <h3>Deep Learning Türkiye</h4>
+                                <h3>Global AI Hub</h4>
                             </div>
                         </div><div class="program-item">
                             <div class="time">
@@ -533,9 +601,9 @@
                                 <img src="../assets/partners/RGB-LogoV4.png" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel, Kapanış</h3>
+                                <h3 class="item-title">Panel</h3>
                                 <hr/>
-                                <h4>Ana Sponsor</h4>
+                                <h4>Lightning Talks</h4>
                             </div>
                         </div>
                     </div>
