--- a/program/index.html
+++ b/program/index.html
@@ -180,7 +180,7 @@
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
-                                <h3><b>Trendyol</b> |  Growth Ekibi</h3>
+                                <h3><b>Trendyol Group</b> |  Growth Ekibi</h3>
                                 
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                                 <hr>
                                 <div>
                                     13<br>
-                                    45
+                                    40
                                 </div>
                             </div>
                             <div class="image">
@@ -365,7 +365,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/cansucanca.jpeg" alt="">
+                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
@@ -374,6 +374,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="program-container">
                         <h3 class="program-day">8 Kasım - Pazar</h3>
                         <div class="program-item">
@@ -522,7 +523,7 @@
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
-                                <h3><b>Trendyol</b> |  Teknoloji Ekibi</h3>
+                                <h3><b>Trendyol Group</b> |  Teknoloji Ekibi</h3>
                             </div>
                         </div>
                         <div class="program-item">
