--- a/program/index.html
+++ b/program/index.html
@@ -374,7 +374,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="program-container">
                         <h3 class="program-day">8 Kasım - Pazar</h3>
                         <div class="program-item">
@@ -611,6 +611,38 @@
                 </div>
             </div>
             <br/><br/>
+            <div class="container container-wide">
+                <button type="button" class="btn btn-primary collapsible"
+                    style="font-size: x-large; margin: auto; display: block;">Datacamp AMA</button>
+                <div class="programs-container content">
+                    <div class="program-container">
+                        <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
+                        <h3 class="program-day">4 Kasım - Çarşamba</h3>
+                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    18<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/onurkoc.jpg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Use AI for A Better World AMA</h3>
+                                <hr />
+                                <h4>Onur Koç, Microsoft Türkiye CTO</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><br/><br/>
             <div class="container container-wide" >
                 <button type="button" class="btn btn-primary collapsible" style="font-size: x-large; margin: auto; display: block;">Workshop Programı</button>
                 <div class="programs-container content">
@@ -978,15 +1010,6 @@
                 </div>
             </div><br/><br/>
             <div class="container container-wide" >
-                <button type="button" class="btn btn-primary collapsible" style="font-size: x-large; margin: auto; display: block;">Datathon Programı</button>
-                <div class="programs-container content">
-                    <div class="program-container">
-                     <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
-                        <h4 class="program-day">Aralık ayında yapılacak olan Datathon başvuruları Zirve sırasında açılacaktır.</h4>
-                    </div>
-                </div>
-            </div><br/><br/>
-            <div class="container container-wide" >
                 <button type="button" class="btn btn-primary collapsible" style="font-size: x-large; margin: auto; display: block;">DataCamp x Kariyer</button>
                 <div class="programs-container content">
                     <div class="program-container">
@@ -1082,6 +1105,15 @@
                                 
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div><br/><br/>
+            <div class="container container-wide" >
+                <button type="button" class="btn btn-primary collapsible" style="font-size: x-large; margin: auto; display: block;">Datathon Programı</button>
+                <div class="programs-container content">
+                    <div class="program-container">
+                     <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
+                        <h4 class="program-day">Aralık ayında yapılacak olan Datathon başvuruları Zirve sırasında açılacaktır.</h4>
                     </div>
                 </div>
             </div><br/><br/>
