bazi slotlar dolduruldu

--- a/program/index.html
+++ b/program/index.html
@@ -198,12 +198,12 @@
                             </div>
                             <div class="image">
                                 
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/ilkerkurtulus.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Finansta Makine Öğrenmesi Teknolojileri</h3>
                                 <hr/>
-                                <h4>Tarfin</h4>
+                                <h4>İlker Kurtuluş - Senior Data Scientist, Tarfin</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -243,8 +243,9 @@
                                 <img src="../assets/partners/RGB-LogoV4.png" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title"></h3>
-                                <h2>Panel</h2>
+                                <h3 class="item-title">Panel</h3>
+                                <hr/>
+                                <h4>Hevi AI</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -575,16 +576,16 @@
                                 <hr>
                                 <div>
                                     16<br>
-                                    15
+                                    20
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/ferhatisyapan.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Yemeksepeti’nde Veri Uygulamları</h3>
                                 <hr/>
-                                <h4>Bireysel Konuşma(Influencer)</h4>
+                                <h4>Ferhat İşyapan</h4>
                             </div>
                         </div><div class="program-item">
                             <div class="time">
