--- a/index.html
+++ b/index.html
@@ -124,9 +124,21 @@
                         <h3 style="font-size: 2.4vh">Etkinliğe Kalan Süre</h3>
                         <h3 id="countdownTimer" style="font-size: 2.6vh;"></h3> <!--Kalan süre için 4 Kasım 00:00'ı baz aldım, değiştirmek isterseniz fonksiyon aşağıda. "Nov 4, 2020 00:00:00" şeklinde aratabilirsiniz.-->
                         <h3 style="font-size: 2.4vh;">4 - 11 Kasım</h3>
+                        </p>
                         <div class="btn btn-primary">
                             <a style="color: white; font-size: 2.4vh;" href="/kayit/">Kayıt Ol!</a>
                         </div>
+                        </p>
+                        <p>
+                        <div class="btn btn-primary">
+                            <a style="color: white; font-size: 2.4vh;" href="/sponsorlar/">Sponsorlarımız</a>
+                        </div>
+                        </p>
+                        <p>
+                        <div class="btn btn-primary">
+                            <a style="color: white; font-size: 2.4vh;" href="/program/">DataCamp '20 Programı</a>
+                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
