kulupleri ekledim. programa resimler

--- a/program/index.html
+++ b/program/index.html
@@ -366,7 +366,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/dltr.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
@@ -475,7 +475,10 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/Koray Kocabaş - Moderatör - Big Data Analytics Direktörü.jpg" alt="">
+                                <img src="../assets/partners/Mehmet Ali Erdin - emlakjet.com CTO.jpg" alt="">
+                                <img src="../assets/partners/Umut Tufan - cimri.com CTO.jpg" alt="">
+                                <img src="../assets/partners/Tansel Kılıç - Odeon Senior Yazılım Direktörü.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
@@ -499,7 +502,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/gizemasici.jpeg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Data Science for Public Good</h3>
@@ -560,7 +563,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/Only AI Hub.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
