itu ieee sikinti cozuldu

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -383,7 +383,7 @@
                         <div class="col-lg-4">
                             <div class="sponsor">
                                 <a target="_blank" href="http://www.ituieee.com/">
-                                    <img style="width: 70%;" src="/assets/partners/kulupler/IEEE İTÜ Mavi.png" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/kulupler/IEEE İTÜ Siyah.png" alt="">
                                 </a>
                             </div>
                         </div>
