basın eklendi. workshoplar tba oldu

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -262,13 +262,29 @@
 
                     </div>
 
-                    <div class="row" style="align-items: center; display: none;">
+                    <div class="row align-items-center">
                         <div class="col-12">
                             <h3>Medya Destekçileri</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-6 mx-auto" >
+                            <div class="sponsor">
+                                <a target="_blank" href="https://shiftdelete.net/">
+                                    <img style="width: 70%;" src="/assets/partners/shiftdelete.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.webtekno.com/">
+                                    <img style="width: 70%;" src="/assets/partners/webteknoyeni.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3" style="display: none;">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
                                     <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
@@ -276,23 +292,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3">
+                        <div class="col-lg-3" style="display: none;">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
                                     <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
@@ -427,7 +427,7 @@
                                 </a>
                             </div>
                         </div>
-                        
+
                         <div class="col-lg-">
                             <div class="sponsor">
                                 <a target="_blank" href="">
