--- a/program/index.html
+++ b/program/index.html
@@ -651,8 +651,14 @@
                 <button type="button" class="btn btn-primary collapsible" style="font-size: x-large; margin: auto; display: block;">Workshop Programı</button>
                 <div class="programs-container content">
                     <div class="program-container">
+                        <h3 class="program-day">Workshop programı ilerleyen tarihlerde açıklanacaktır.</h3>
+                    </div>
+                    <!--
+                    <div class="program-container">
                         <h3 class="program-day">4 Kasım - Çarşamba</h3>
+                    -->
                         <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
+                    <!-- 
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -742,7 +748,6 @@
                     </div>
                     <div class="program-container">
                         <h3 class="program-day">5 Kasım - Perşembe</h3>
-                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -833,7 +838,6 @@
                     
                     <div class="program-container">
                         <h3 class="program-day">9 Kasım - Pazartesi</h3>
-                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -923,7 +927,6 @@
                     </div>
                     <div class="program-container">
                         <h3 class="program-day">10 Kasım - Salı</h3>
-                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
                         <div class="program-item">
                             <div class="time">
                                 <div>
@@ -1011,6 +1014,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div><br/><br/>
             <div class="container container-wide" >
