cansu canca ama

--- a/program/index.html
+++ b/program/index.html
@@ -645,6 +645,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="program-container">
+                        <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
+                        <h3 class="program-day">9 Kasım - Pazartesi</h3>
+                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    18<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/cansucanca.jpeg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title"></h3>
+                                <h3>Cansu Canca | Ask Me Anything</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div><br/><br/>
             <div class="container container-wide" >
