--- a/program/index.html
+++ b/program/index.html
@@ -475,10 +475,10 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/Koray Kocabaş - Moderatör - Big Data Analytics Direktörü.jpg" alt="">
-                                <img src="../assets/partners/Mehmet Ali Erdin - emlakjet.com CTO.jpg" alt="">
-                                <img src="../assets/partners/Umut Tufan - cimri.com CTO.jpg" alt="">
-                                <img src="../assets/partners/Tansel Kılıç - Odeon Senior Yazılım Direktörü.jpg" alt="">
+                                <img src="../assets/partners/KorayKocabaş-Moderatör-BigDataAnalyticsDirektörü.jpg" alt="">
+                                <img src="../assets/partners/MehmetAliErdinemlakjet.comCTO.jpg" alt="">
+                                <img src="../assets/partners/UmutTufan-cimri.comCTO.jpg" alt="">
+                                <img src="../assets/partners/TanselKılıç-OdeonSeniorYazılımDirektörü.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
