--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -342,37 +342,37 @@
 
                     </div>
 
-                    <div class="row align-self-center" style="align-items: center;">
+                    <div class="row align-items-center">
                         <div class="col-12">
                             <h3>Öğrenci Kulüpleri</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-3">
-                            <div class="sponsor">
+                        <div class="col-lg-4">
+                            <div class="sponsor mx-auto">
                                 <a target="_blank" href="https://www.instagram.com/sucode_cc/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/SucodeLogo.png" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
-                            <div class="sponsor">
+                        <div class="col-lg-4">
+                            <div class="sponsor mx-auto">
                                 <a target="_blank" href="https://www.acmhacettepe.com/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/acmlogokare.png" alt="">
                                 </a>
                             </div>
                         </div>
                         
-                        <div class="col-lg-3">
-                            <div class="sponsor">
+                        <div class="col-lg-4">
+                            <div class="sponsor mx-auto">
                                 <a target="_blank" href="http://www.ieee.metu.edu.tr/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/1.png" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://yazilimbilisim.com/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/BuyabiLogo_02.png" alt="">
@@ -380,7 +380,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://ies.ku.edu.tr/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/ies-logo--100x42.png" alt="">
@@ -388,7 +388,7 @@
                             </div>
                         </div>
                         
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="http://www.ituieee.com/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/ieeitumavi.png" alt="">
@@ -396,15 +396,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
-                            <div class="sponsor">
-                                <a target="_blank" href="https://www.instagram.com/itudatascience/?hl=en">
-                                    <img style="width: 70%;" src="/assets/partners/kulupler/image0.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.instagram.com/metustatclub/?hl=en">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/Kırmızı Logo 1.png" alt="">
@@ -412,7 +404,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.instagram.com/agucompsociety/?hl=en">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/kırmızıpng.png" alt="">
@@ -420,7 +412,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://ituacm.com/">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/ACM_LOGO.png" alt="">
@@ -428,14 +420,22 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-">
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://www.instagram.com/itudatascience/?hl=en">
+                                    <img style="width: 70%;" src="/assets/partners/kulupler/image0.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <!--
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="">
                                     <img style="width: 70%;" src="/assets/partners/kulupler/" alt="">
                                 </a>
                             </div>
                         </div>
-
+                            -->
                     </div>
 
                     <div class="row" style="align-items: center;">
